fix:position alternate timeline itemms alignment

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -38,18 +38,27 @@
   display: flex;
 }
 
-.MuiTimeline-positionAlternate
-  .css-1v6o2d9-MuiTimelineItem-root:nth-of-type(even)
-  .MuiTimelineContent-root {
-  display: flex;
+/* .MuiTimeline-positionAlternate
+  .MuiTimelineContent-positionAlternate:nth-of-type(even) {
   justify-content: flex-end;
-  align-items: flex-start;
+} */
+/* .MuiTimeline-positionAlternate
+  .MuiTimelineContent-positionAlternate:nth-of-type(odd) {
+  justify-content: flex-start;
+} */
+
+.MuiTimeline-positionAlternate
+  li:nth-of-type(even)
+  .MuiTimelineContent-positionAlternate {
+  justify-content: flex-end;
 }
 
 .MuiTimelineContent-positionAlternate {
   margin-top: -4px !important;
   padding-top: 0px !important;
   padding-bottom: 0px !important;
+  display: flex !important;
+  align-items: flex-start !important;
 }
 
 .MuiTimelineItem-positionRight:before {
